--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <p>Hey there!</p>
 <p>Hey Allison I want to listen to me</p>
 a;sldkfjasl;dkfjasd;l
+<p>And another paragraph by Bonnie</p>
 </body>
 </html>
